--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,14 @@ select{
   box-shadow: none !important;
   border-color: black !important;
 }
+.fa-plus{
+  color: green !important;
+  margin: 5px;
+}
+.fa-minus{
+  color: red !important;
+  margin: 5px;
+}
+.fa-trash{
+  color:red !important;
+}
